cambios en html de una caja para desencriptar, y cambios de nombre de una variable

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
 
     <input type="text" id="mensaje" name="mensaje" placeholder="Introduce tu mensaje" /><br />
 
-    <input type="number" id="offset" name="número" value="20" min="1" max="20" step="1" /><br />
+    <input type="number" id="offset" name="número" value="33" min="1" max="33" step="1" /><br />
 
-    <input type="submit" value="Encriptar" id="btnEncriptar"  /></br>
+    <input type="submit" value="Encriptar" id="btnEncriptar"  /><br>
 
   </form>
 
@@ -33,6 +33,8 @@
     <input type="text" id="resultado" name="resultado" placeholder="Resultado del cifrado" /><br />
 
     <input type="submit" value="Desencriptar" id="btnDesencriptar"/><br />
+
+    <!--<input for="desencriptado2" id="desencriptado2" name="desencriptado2" placeholder="Desencriptado"/><br />-->
 
     
   </form>
