--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
  <header>
       <h1><b><i>Bienvenidos a tu página de cifrado</i></b></h1>
       <p><i>Introduce tu mensaje para cifrar</i></p>
+      <p><i>Ingresa solo letras Mayúculas</i></p>
     </header>
   <main id="root">
 
