cambie un error de tipeo en la palabra mayúscula y mi resultado final de decifrado

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
  <header>
       <h1><b><i>Bienvenidos a tu página de cifrado</i></b></h1>
       <p><i>Introduce tu mensaje para cifrar</i></p>
-      <p><i>Ingresa solo letras Mayúculas</i></p>
+      <p><i>Ingresa solo letras Mayúsculas</i></p>
     </header>
   <main id="root">
 
@@ -35,9 +35,9 @@
 
     <input type="button" value="Desencriptar" id="btnDesencriptar" /><br />
 
-    <input type="text" id="mensajeFinal" name="mensajeFinal" placeholder="Resultado del cifrado" /><br />
+    <input type="text" id="mensajeFinal" name="mensajeFinal" placeholder="Resultado del decifrado" /><br />
 
-    <!--<input for="desencriptado2" id="desencriptado2" name="desencriptado2" placeholder="Desencriptado"/><br />-->
+   
 
   </form>
  </main>
